# veritable

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/vrtb-cli/: Cargo.toml
crates/vrtb-cli/src/: format.rs  main.rs  spec.rs
crates/vrtb-cli/tests/: conformance.rs
crates/vrtb-connectors/: Cargo.toml
crates/vrtb-connectors/src/: duckdb.rs  lib.rs  postgres.rs
crates/vrtb-core/: Cargo.toml
crates/vrtb-core/src/: conformance.rs  engine.rs  error.rs  format.rs  lib.rs
crates/vrtb-duck/: Cargo.toml
crates/vrtb-duck/src/: adapter.rs  dialect.rs  engine.rs  lib.rs
crates/vrtb-pg/: Cargo.toml
crates/vrtb-pg/src/: adapter.rs  dialect.rs  engine.rs  lib.rs
crates/vrtb-utils/: Cargo.toml
crates/vrtb-utils/src/: checks.rs  lib.rs  sql.rs
docs/: STATUS.md
testdata/: requirements.txt  seed.py
