[package]
name = "vrtb-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "veritable"
path = "src/main.rs"

[dependencies]
vrtb-core = { path = "../vrtb-core" }
vrtb-connectors = { path = "../vrtb-connectors" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
