[package]
name = "vrtb-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "veritable"
path = "src/main.rs"

[dependencies]
vrtb-core = { path = "../vrtb-core" }
vrtb-pg = { path = "../vrtb-pg" }
vrtb-duck = { path = "../vrtb-duck" }
clap = { version = "4", features = ["derive"] }
load-dotenv = {version="0.1.2"}