[package]
name = "vrtb-pg"
version = "0.1.0"
edition = "2024"

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres", "dep:tokio"]

[dependencies]
vrtb-core = { path = "../vrtb-core" }
vrtb-utils = { path = "../vrtb-utils" }

tokio-postgres = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "macros"], optional = true }
